--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,3 +6,12 @@ body {
 .v-card {
   border-radius: 24px !important;
 }
+
+/* global speed-dial override */
+.v-speed-dial--right {
+  right: 32px !important;
+}
+
+.v-speed-dial--bottom {
+  bottom: 32px !important;
+}
