--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,22 @@
-body {
-  overflow: hidden;
+.body,
+.wrapper {
+  position: absolute;
+  touch-action: none;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  overflow-y: hidden;
 }
+
+.body {
+  z-index: 1;
+}
+
+.wrapper {
+  z-index: 2;
+}
+
 
 /* global card css override */
 .v-card {
@@ -23,6 +39,10 @@ body {
 
 .v-btn--right {
   right: 32px !important;
+}
+
+.v-btn--top {
+  top: 32px !important;
 }
 
 .v-btn--bottom {
