--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100%;
   margin: 0;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .body {
@@ -15,6 +15,18 @@
 
 .wrapper {
   z-index: 2;
+}
+
+body::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+body {
+  overflow: -moz-scrollbars-none;
+}
+
+body {
+  -ms-overflow-style: none;
 }
 
 
@@ -55,6 +67,6 @@
 }
 
 /* global dialog css override */
-.v-dialog{
+.v-dialog {
   border-radius: 24px !important;
 }
