Edit feature in profile page added

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -78,3 +78,11 @@ body {
 .selectable {
   cursor: pointer;
 }
+
+*::-webkit-scrollbar {
+  width: 0 !important;
+}
+
+* {
+  overflow: -moz-scrollbars-none;
+}
