--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -79,6 +79,10 @@ body {
   border-radius: 24px !important;
 }
 
+.v-snack__wrapper {
+  min-width: unset !important;
+}
+
 .selectable {
   cursor: pointer;
 }
