--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -79,7 +79,7 @@ body {
   border-radius: 24px !important;
 }
 
-.v-snack__wrapper {
+.network-snack>.v-snack__wrapper {
   min-width: unset !important;
 }
 
